--- a/00_Website_Text_Projekt/styles/main.css
+++ b/00_Website_Text_Projekt/styles/main.css
@@ -4,6 +4,11 @@ html {
 }
 
 /* RASTER, GROSSE BEREICHE */
+
+.content {
+  overflow: hidden;
+  max-width: 100vw;
+}
 .schwarzer_block {
   background-color: black;
 }
@@ -68,9 +73,9 @@ html {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, auto);
   grid-template-areas:
-    "werden_als werden_als werden_als werden_als"
+    "werden werden werden werden"
     "kind_eins kind_zwei kind_drei kind_vier"
-    "schon_als schon_als schon_als schon_als"
+    "schon schon schon schon"
     "mann_eins mann_zwei mann_drei mann_vier"
     "geeicht geeicht geeicht geeicht";
 }
@@ -119,7 +124,7 @@ html {
 
 .vier_song_zeile {
   grid-area: reihe_vier;
-  animation-name: songzeilen_bewegen_weitere_saetze;
+  animation-name: songzeilen_bewegen_weitere_saetze_plus;
   animation-duration: 1s;
   animation-delay: 2s;
   animation-iteration-count: 1;
@@ -135,7 +140,7 @@ html {
 
 .fuenf_song_zeile {
   grid-area: reihe_fuenf;
-  animation-name: songzeilen_bewegen_weitere_saetze;
+  animation-name: songzeilen_bewegen_weitere_saetze_plus;
   animation-duration: 1s;
   animation-delay: 3s;
   animation-iteration-count: 1;
@@ -364,7 +369,7 @@ html {
 
 /* Bereich 5 */
 .werden_als {
-  grid-area: werden_als;
+  grid-area: werden;
 }
 
 .k {
@@ -398,7 +403,7 @@ html {
 }
 
 .schon_als {
-  grid-area: schon_als;
+  grid-area: schon;
 }
 
 .m {
@@ -426,6 +431,10 @@ html {
   animation-direction: normal;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
+}
+
+.geeicht {
+  grid-area: geeicht;
 }
 
 
@@ -523,6 +532,23 @@ html {
 
   100% {
     transform: translate(0%, -103%);
+    opacity: 100%;
+  }
+}
+
+@keyframes songzeilen_bewegen_weitere_saetze_plus {
+  0% {
+    transform: translate(0%, 0%);
+    opacity: 0%;
+  }
+
+  50% {
+    transform: translate(0%, -77%);
+    opacity: 50%;
+  }
+
+  100% {
+    transform: translate(0%, -154%);
     opacity: 100%;
   }
 }
@@ -628,7 +654,7 @@ html {
   /* BP 850px Mobile 640px */
   @media all and (max-width: 53em) {
     html {
-      font-size: 7px;
+      font-size: 5.5px;
     }
 
     .raster_bereich_vier {
@@ -639,6 +665,22 @@ html {
       grid-template-areas:
         "aussen hart und"
         "innen ganz weich";
+    }
+
+
+    .raster_bereich_fuenf {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(7, auto);
+      grid-row-gap: 1em;
+      grid-template-areas:
+        "werden werden"
+        "kind_eins kind_zwei"
+        "kind_drei kind_vier"
+        "schon schon"
+        "mann_eins mann_zwei"
+        "mann_drei mann_vier"
+        "geeicht geeicht";
     }
 
     /*
