--- a/00_Website_Text_Projekt/styles/main.css
+++ b/00_Website_Text_Projekt/styles/main.css
@@ -96,8 +96,12 @@ html {
 
 .zwei_song_zeile {
   grid-area: reihe_zwei;
+}
+
+.isinview .zwei_song_zeile{
   animation-name: bewegen_sz_zwei;
   animation-duration: 1s;
+  animation-delay: 2s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
@@ -111,9 +115,12 @@ html {
 
 .drei_song_zeile {
   grid-area: reihe_drei;
+}
+
+.isinview .drei_song_zeile {
   animation-name: bewegen_sz_drei;
   animation-duration: 1s;
-  animation-delay: 1s;
+  animation-delay: 3s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
@@ -123,9 +130,12 @@ html {
 
 .vier_song_zeile {
   grid-area: reihe_vier;
+}
+
+.isinview .vier_song_zeile {
   animation-name: bewegen_sz_vier;
   animation-duration: 1s;
-  animation-delay: 2s;
+  animation-delay: 4s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
@@ -139,9 +149,12 @@ html {
 
 .fuenf_song_zeile {
   grid-area: reihe_fuenf;
+}
+
+.isinview .fuenf_song_zeile {
   animation-name: bewegen_sz_fuenf;
   animation-duration: 1s;
-  animation-delay: 3s;
+  animation-delay: 5s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
@@ -151,9 +164,11 @@ html {
 
 .sechs_song_zeile {
   grid-area: reihe_sechs;
+}
+.isinview .sechs_song_zeile {
   animation-name: bewegen_sz_sechs;
   animation-duration: 1s;
-  animation-delay: 4s;
+  animation-delay: 6s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
@@ -202,7 +217,7 @@ html {
 }
 
 /* Bereich 2 */
-.Maenner {
+.maenner {
   font-family: "Titling Gothic FB Extd Bd";
   font-style: normal;
   font-weight: normal;
@@ -210,14 +225,17 @@ html {
   text-transform: uppercase;
   color: white;
   margin-left: -0.1em;
+  opacity: 0%;
+}
+
+.isinview .maenner {
   animation-name: maenner_vergroessern;
   animation-duration: 0.5s;
-  /* animation-delay: 4s; */
+  animation-delay: 1s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
-  opacity: 0%;
 }
 
 .raster_bereich_zwei :nth-child(2), .raster_bereich_zwei :nth-child(4), .raster_bereich_zwei :nth-child(6) {
@@ -253,9 +271,13 @@ html {
 /* Bereich 3 */
 .sieben_song_zeile {
   grid-area: reihe_eins;
+}
+
+.isinview .sieben_song_zeile{
   animation-name: bewegen_sz_zwei;
   animation-duration: 1s;
   animation-iteration-count: 1;
+  animation-delay: 1s;
   animation-direction: normal;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
@@ -265,9 +287,12 @@ html {
 
 .acht_song_zeile {
   grid-area: reihe_zwei;
+}
+
+.isinview .acht_song_zeile {
   animation-name: bewegen_sz_drei;
   animation-duration: 1s;
-  animation-delay: 1s;
+  animation-delay: 2s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
@@ -298,6 +323,8 @@ html {
 
 .aussen {
   grid-area: aussen;
+}
+.isinview .aussen {
   align-self: flex-end;
   animation-name: aussen_runter;
   animation-duration: 0.7s;
@@ -310,6 +337,9 @@ html {
 
 .hart {
   grid-area: hart;
+}
+
+.isinview .hart {
   align-self: flex-end;
   animation-name: aussen_runter;
   animation-duration: 0.7s;
@@ -323,6 +353,9 @@ html {
 
 .und {
   grid-area: und;
+
+}
+.isinview .und {
   align-self: flex-end;
   animation-name: aussen_runter;
   animation-duration: 0.7s;
@@ -336,6 +369,9 @@ html {
 
 .innen {
   grid-area: innen;
+
+}
+.isinview .innen {
   animation-name: innen_hoch;
   animation-duration: 0.7s;
   animation-delay: 2.1s;
@@ -348,6 +384,9 @@ html {
 
 .ganz {
   grid-area: ganz;
+
+}
+.isinview .ganz {
   animation-name: innen_hoch;
   animation-duration: 0.7s;
   animation-delay: 2.8s;
@@ -360,6 +399,9 @@ html {
 
 .weich {
   grid-area: weich;
+
+}
+.isinview .weich {
   animation-name: innen_hoch;
   animation-duration: 0.7s;
   animation-delay: 3.5s;
@@ -395,10 +437,10 @@ html {
   opacity: 0%;
 }
 
-.k, .i, .n_kind, .d {
+.isinview .k, .isinview .i, .isinview .n_kind, .isinview .d {
   animation-name: erscheinen_scale;
   animation-duration: 1.3s;
-  animation-delay: 0s;
+  animation-delay: 1s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
@@ -426,10 +468,10 @@ html {
   opacity: 0%;
 }
 
-.m, .a, .n_mann_eins, .n_mann_zwei {
+.isinview .m, .isinview .a, .isinview .n_mann_eins, .isinview .n_mann_zwei {
   animation-name: erscheinen_scale;
   animation-duration: 1.3s;
-  animation-delay: 1.3s;
+  animation-delay: 2.3s;
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
@@ -446,6 +488,9 @@ html {
 .wann_ist {
   grid-area: wann_ist;
   opacity: 0%;
+}
+
+.isinview .wann_ist {
   animation-name: erscheinen;
   animation-duration: 1s;
   animation-delay: 0s;
@@ -456,7 +501,7 @@ html {
   animation-fill-mode: forwards;
 }
 
-.raster_eins_bereich_sechs .wann_ist {
+/* .raster_eins_bereich_sechs .wann_ist {
   opacity: 0%;
   animation-name: erscheinen;
   animation-duration: 1s;
@@ -466,11 +511,13 @@ html {
   animation-direction: normal;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
-}
+} */
 
 .ein_mann_eins {
   grid-area: ein_mann_eins;
   opacity: 0%;
+}
+.isinview .ein_mann_eins {
   animation-name: erscheinen;
   animation-duration: 1s;
   animation-delay: 1s;
@@ -484,6 +531,9 @@ html {
 .ein_mann_zwei {
   grid-area: ein_mann_zwei;
   opacity: 0%;
+}
+
+.isinview .ein_mann_zwei {
   animation-name: erscheinen;
   animation-duration: 1s;
   animation-delay: 2s;
@@ -589,7 +639,7 @@ html {
   }
 
   100% {
-    transform: translate(0%, -203%);
+    transform: translate(0%, -205%);
     opacity: 100%;
   }
 }
@@ -602,8 +652,8 @@ html {
   }
 
   50% {
-    transform: scale(130%);
-    opacity: 50%;
+    transform: scale(200%);
+    opacity: 100%;
   }
 
   100% {
