--- a/00_Website_Text_Projekt/styles/main.css
+++ b/00_Website_Text_Projekt/styles/main.css
@@ -5,17 +5,18 @@ html {
 }
 
 /* RASTER, GROSSE BEREICHE */
-
 .content {
   overflow: hidden;
   max-width: 100vw;
 }
+
 .schwarzer_block {
   background-color: black;
 }
 
 .bereich_eins, .bereich_drei, .bereich_sechs, {
   width: 85%;
+  background-color: green;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10vmin;
@@ -79,7 +80,7 @@ html {
     "geeicht geeicht geeicht geeicht";
 }
 
-.raster_eins_bereich_sechs, .raster_zwei_bereich_sechs,  {
+.raster_eins_bereich_sechs, .raster_zwei_bereich_sechs, {
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: repeat(3, auto);
@@ -98,7 +99,7 @@ html {
   grid-area: reihe_zwei;
 }
 
-.isinview .zwei_song_zeile{
+.isinview .zwei_song_zeile {
   animation-name: bewegen_sz;
   animation-duration: 1s;
   animation-delay: 2s;
@@ -183,7 +184,6 @@ html {
 
 /* ABSATZFORMATE */
 /* Bereich 1 */
-
 .strophe_titel {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: italic;
@@ -196,7 +196,6 @@ html {
   margin-bottom: 0.06em;
   padding: 0;
 }
-
 
 .strophe_titel_klein {
   font-family: 'Source Sans Pro', sans-serif;
@@ -251,7 +250,6 @@ html {
   margin-right: -0.1em;
 }
 
-
 .auszeichnung_fett {
   font-family: "Titling Gothic FB Extd Bd";
   font-style: normal;
@@ -273,7 +271,7 @@ html {
   grid-area: reihe_eins;
 }
 
-.isinview .sieben_song_zeile{
+.isinview .sieben_song_zeile {
   animation-name: bewegen_sz;
   animation-duration: 1s;
   animation-iteration-count: 1;
@@ -283,7 +281,6 @@ html {
   animation-fill-mode: forwards;
   opacity: 0%;
 }
-
 
 .acht_song_zeile {
   grid-area: reihe_zwei;
@@ -324,6 +321,7 @@ html {
 .aussen {
   grid-area: aussen;
 }
+
 .isinview .aussen {
   align-self: flex-end;
   animation-name: aussen_runter;
@@ -354,8 +352,8 @@ html {
 
 .und {
   grid-area: und;
-
 }
+
 .isinview .und {
   align-self: flex-end;
   animation-name: aussen_runter;
@@ -370,8 +368,8 @@ html {
 
 .innen {
   grid-area: innen;
-
 }
+
 .isinview .innen {
   animation-name: innen_hoch;
   animation-duration: 0.7s;
@@ -385,8 +383,8 @@ html {
 
 .ganz {
   grid-area: ganz;
-
 }
+
 .isinview .ganz {
   animation-name: innen_hoch;
   animation-duration: 0.7s;
@@ -400,8 +398,8 @@ html {
 
 .weich {
   grid-area: weich;
-
 }
+
 .isinview .weich {
   animation-name: innen_hoch;
   animation-duration: 0.7s;
@@ -414,10 +412,10 @@ html {
 }
 
 /* Bereich 5 */
-
 .werden_als .strophe_titel, .schon_als .strophe_titel, .geeicht .strophe_titel {
   margin-bottom: -0.043em;
 }
+
 .werden_als {
   grid-area: werden;
 }
@@ -462,8 +460,6 @@ html {
   opacity: 100%;
 }
 
-
-
 /* .isinview .k, .isinview .i, .isinview .n_kind, .isinview .d {
   animation-name: erscheinen_scale;
   animation-duration: 1.3s;
@@ -473,7 +469,6 @@ html {
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 } */
-
 .schon_als {
   grid-area: schon;
 }
@@ -487,6 +482,7 @@ html {
 .m:hover {
   opacity: 100%;
 }
+
 .a {
   grid-area: mann_zwei;
   opacity: 0%;
@@ -496,6 +492,7 @@ html {
 .a:hover {
   opacity: 100%;
 }
+
 .n_mann_eins {
   grid-area: mann_drei;
   opacity: 0%;
@@ -505,11 +502,14 @@ html {
 .n_mann_eins:hover {
   opacity: 100%;
 }
+
 .n_mann_zwei {
   grid-area: mann_vier;
   opacity: 0%;
   transition: all 1s ease;
-}.n_mann_zwei:hover {
+}
+
+.n_mann_zwei:hover {
   opacity: 100%;
 }
 
@@ -522,14 +522,11 @@ html {
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 } */
-
 .geeicht {
   grid-area: geeicht;
 }
 
-
 /* Bereich 6 */
-
 .wann_ist {
   grid-area: wann_ist;
   opacity: 0%;
@@ -557,11 +554,11 @@ html {
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 } */
-
 .ein_mann_eins {
   grid-area: ein_mann_eins;
   opacity: 0%;
 }
+
 .isinview .ein_mann_eins {
   animation-name: erscheinen;
   animation-duration: 1s;
@@ -586,12 +583,11 @@ html {
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: linear;
-  animation-fill-mode: forwards;}
-
+  animation-fill-mode: forwards;
+}
 
 /* Bereich 7 */
-
-.bereich_sieben {
+/* .bereich_sieben {
   display: flex;
   justify-content: flex-end;
 }
@@ -609,15 +605,11 @@ a {
   color: #ea899a;
   transition: all 0.5s ease;
   text-decoration: none;
-
 }
 
 a:hover {
   color: #ffbccb;
-}
-
-
-
+} */
 
 /* SONSTIGES */
 .abstand {
@@ -631,8 +623,6 @@ a:hover {
 .grosser_abstand {
   height: 100vw;
 }
-
-
 
 /* ANIMATIONEN */
 /* Animation SONGZEILEN */
@@ -652,7 +642,6 @@ a:hover {
     opacity: 100%;
   }
 }
-
 
 /* Animation M Ä N N E R */
 @keyframes maenner_vergroessern {
@@ -746,10 +735,6 @@ a:hover {
   }
 }
 
-
-
-
-
 /* MEDIAQUERIES */
 /* BP Desktop 1024px */
 @media all and (max-width: 64em) {
@@ -772,7 +757,6 @@ a:hover {
         "aussen hart und"
         "innen ganz weich";
     }
-
 
     .raster_bereich_fuenf {
       display: grid;
