Impressum, Animations, Buttons, Scroll Indicator

--- a/00_Website_Text_Projekt/_Sicherheitskopie/kind_mann_einzeln/styles/main.css
+++ b/00_Website_Text_Projekt/_Sicherheitskopie/kind_mann_einzeln/styles/main.css
@@ -4,22 +4,6 @@ html {
   cursor: default;
 }
 
-.progress-container {
-  width: 100%;
-  height: 2.5px;
-  background: none;
-  position: fixed;
-  z-index: 100;
-}
-
-.progress-bar {
-  height: 2.5px;
-  background: #ea899a;
-  width: 0%;
-  z-index: 101;
-}
-
-
 /* RASTER, GROSSE BEREICHE */
 .content {
   overflow: hidden;
@@ -30,7 +14,7 @@ html {
   background-color: black;
 }
 
-.bereich_eins, .bereich_drei, .bereich_sechs, .bereich_sieben {
+.bereich_eins, .bereich_drei, .bereich_sechs {
   width: 85%;
   margin-left: auto;
   margin-right: auto;
@@ -85,14 +69,14 @@ html {
 
 .raster_bereich_fuenf {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, auto);
   grid-template-areas:
-    "werden"
-    "kind"
-    "schon"
-    "mann"
-    "geeicht";
+    "werden werden werden werden"
+    "kind_eins kind_zwei kind_drei kind_vier"
+    "schon schon schon schon"
+    "mann_eins mann_zwei mann_drei mann_vier"
+    "geeicht geeicht geeicht geeicht";
 }
 
 .raster_bereich_sechs {
@@ -104,7 +88,6 @@ html {
     "ein_mann_eins ."
     "ein_mann_zwei .";
 }
-
 
 /* SONGZEILEN GRUPPEN*/
 .eins_song_zeile {
@@ -436,30 +419,108 @@ html {
   grid-area: werden;
 }
 
-.kind {
-  grid-area: kind;
+.k {
+  grid-area: kind_eins;
   opacity: 0%;
   transition: all 1s ease;
 }
 
-.kind:hover {
+.k:hover {
   opacity: 100%;
 }
 
+.i {
+  grid-area: kind_zwei;
+  opacity: 0%;
+  transition: all 1s ease;
+}
+
+.i:hover {
+  opacity: 100%;
+}
+
+.n_kind {
+  grid-area: kind_drei;
+  opacity: 0%;
+  transition: all 1s ease;
+}
+
+.n_kind:hover {
+  opacity: 100%;
+}
+
+.d {
+  grid-area: kind_vier;
+  opacity: 0%;
+  transition: all 1s ease;
+}
+
+.d:hover {
+  opacity: 100%;
+}
+
+/* .isinview .k, .isinview .i, .isinview .n_kind, .isinview .d {
+  animation-name: erscheinen_scale;
+  animation-duration: 1.3s;
+  animation-delay: 1s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+} */
 .schon_als {
   grid-area: schon;
 }
 
-.mann {
-  grid-area: mann;
+.m {
+  grid-area: mann_eins;
   opacity: 0%;
   transition: all 1s ease;
 }
 
-.mann:hover {
+.m:hover {
   opacity: 100%;
 }
 
+.a {
+  grid-area: mann_zwei;
+  opacity: 0%;
+  transition: all 1s ease;
+}
+
+.a:hover {
+  opacity: 100%;
+}
+
+.n_mann_eins {
+  grid-area: mann_drei;
+  opacity: 0%;
+  transition: all 1s ease;
+}
+
+.n_mann_eins:hover {
+  opacity: 100%;
+}
+
+.n_mann_zwei {
+  grid-area: mann_vier;
+  opacity: 0%;
+  transition: all 1s ease;
+}
+
+.n_mann_zwei:hover {
+  opacity: 100%;
+}
+
+/* .isinview .m, .isinview .a, .isinview .n_mann_eins, .isinview .n_mann_zwei {
+  animation-name: erscheinen_scale;
+  animation-duration: 1.3s;
+  animation-delay: 2.3s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+} */
 .geeicht {
   grid-area: geeicht;
 }
@@ -525,73 +586,49 @@ html {
 }
 
 /* Bereich 7 */
-.raster_bereich_sieben {
-  display: grid;
-  grid-template-columns: max-content max-content 1fr;
-  grid-template-rows: auto;
-  grid-column-gap: 5em;
-  grid-template-areas:
-    "spalte_eins spalte_zwei .";
-}
-
-.infos {
-  grid-area: spalte_eins;
-}
-
-.song {
-  grid-area: spalte_zwei;
-}
-
-p {
-  color: white;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 1.4rem;
-  line-height: 1.3em;
-  margin: 0;
-  padding: 0;
+.bereich_sieben {
+  display: flex;
+  justify-content: flex-end;
 }
 
 a {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 6rem;
+  text-transform: uppercase;
+  padding: 0;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  margin-bottom: 3vw;
+  color: #ea899a;
+  transition: all 0.5s ease;
   text-decoration: none;
-  color: white;
 }
 
 a:hover {
-  text-decoration: underline;
-}
-
-iframe {
-  border: 0.05em solid white;
-}
-
-.top_button {
-  display: flex;
-  justify-content: flex-end;
-  width: 95%;
-}
-
-img.jump-top {
-  /*jump to top button*/
-  width: 4rem;
-  height: 4rem;
+  color: #ffbccb;
 }
 
 
-.top_button {
-  animation-name: bounce_up;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-direction: normal;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards;
+/* Bereich 8 // Ueber dieses Projekt */
+
+.raster_bereich_acht {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas:
+    ". text .";
 }
 
+.ueber_grundtext {
+  grid-area: text;
+}
 
 /* SONSTIGES */
+
 .kleiner_abstand {
-  height: 2vw;
+  height: 3vw;
 }
 
 .abstand {
@@ -717,34 +754,17 @@ img.jump-top {
   }
 }
 
-/* Animation Top Button bounce_up */
-@keyframes bounce_up {
-  0% {
-    transform: translate(0%, 0%);
-  }
-
-  50% {
-    transform: translate(0%, 10%);
-  }
-
-  100% {
-    transform: translate(0%, 0%);
-  }
-}
-
 /* MEDIAQUERIES */
 /* BP Desktop 1024px */
 @media all and (max-width: 77em) {
   html {
     font-size: 14px;
   }
-}
 
 @media all and (max-width: 67em) {
   html {
     font-size: 12px;
   }
-}
 
 @media all and (max-width: 58em) {
   html {
@@ -755,14 +775,6 @@ img.jump-top {
   @media all and (max-width: 53em) {
     html {
       font-size: 8.5px;
-    }
-
-    .progress-container {
-      height: 2px;
-    }
-
-    .progress-bar {
-      height: 2px;
     }
 
     .bereich_vier {
@@ -781,44 +793,39 @@ img.jump-top {
         "aussen hart und"
         "innen ganz weich";
     }
-  }
 
-  p {
-    font-size: 16px;
-  }
-}
+    .raster_bereich_fuenf {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(7, auto);
+      grid-row-gap: 1em;
+      grid-template-areas:
+        "werden werden"
+        "kind_eins kind_zwei"
+        "kind_drei kind_vier"
+        "schon schon"
+        "mann_eins mann_zwei"
+        "mann_drei mann_vier"
+        "geeicht geeicht";
+    }
 
-@media all and (max-width: 41em) {
-  html {
-    font-size: 7px;
-  }
 
-  .raster_bereich_sieben {
-    display: grid;
-    grid-template-columns: max-content max-content;
-    grid-template-rows: auto;
-    grid-column-gap: 4em;
-    grid-template-areas:
-      "spalte_eins spalte_zwei";
-  }
-}
+  @media all and (max-width: 41em) {
+    html {
+      font-size: 7px;
+    }
 
-@media all and (max-width: 34em) {
-  html {
-    font-size: 6px;
-  }
+  @media all and (max-width: 34em) {
+    html {
+      font-size: 6px;
+    }
 
-  p {
-    font-size: 14px;
+  @media all and (max-width: 29em) {
+    html {
+      font-size: 4px;
+    }
+    /*
+.und {
+  justify-items: center;
+} */
   }
-}
-
-@media all and (max-width: 29em) {
-  html {
-    font-size: 4px;
-  }
-
-  p {
-    font-size: 9px;
-  }
-}
