--- a/00_Website_Text_Projekt/styles/main.css
+++ b/00_Website_Text_Projekt/styles/main.css
@@ -31,14 +31,14 @@ html {
 }
 
 .bereich_eins, .bereich_drei, .bereich_sechs, .bereich_sieben {
-  width: 85%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10vmin;
 }
 
 .bereich_vier {
-  width: 55%;
+  width: 45%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 5vmin;
@@ -326,7 +326,7 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: italic;
   font-weight: 400;
-  font-size: 10vw;
+  font-size: 8vw;
   line-height: 0%;
   text-transform: uppercase;
   color: white;
@@ -734,6 +734,19 @@ img.jump-top {
 
 /* MEDIAQUERIES */
 /* BP Desktop 1024px */
+
+
+@media all and (max-width: 87em) {
+  .bereich_eins, .bereich_drei, .bereich_sechs, .bereich_sieben {
+    width: 85%;
+  }
+
+/* @media all and (max-width: 87em) {
+  html {
+    font-size: 16px;
+  }
+} */
+
 @media all and (max-width: 77em) {
   html {
     font-size: 14px;
@@ -770,6 +783,10 @@ img.jump-top {
       margin-left: auto;
       margin-right: auto;
       margin-top: 5vmin;
+    }
+
+    .vertikal {
+      font-size: 12vw;
     }
 
     .raster_bereich_vier {
