--- a/00_Website_Text_Projekt/_Praesi/D_Rasteraufbau_Code/Version_2/styles/main.css
+++ b/00_Website_Text_Projekt/_Praesi/D_Rasteraufbau_Code/Version_2/styles/main.css
@@ -9,16 +9,16 @@ html {
 }
 
 .bereich_eins {
-  width: 85%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5vmin;
+  margin-top: 10vmin;
 }
 
 .raster_bereich_eins {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(6, auto);
+  grid-template-rows: repeat(6, 8.8rem);
   grid-template-areas:
     "reihe_eins reihe_eins"
     "reihe_zwei reihe_zwei"
@@ -37,7 +37,7 @@ html {
 }
 
 .isinview .zwei_song_zeile {
-  animation-name: bewegen_sz_zwei;
+  animation-name: bewegen_sz;
   animation-duration: 1s;
   animation-delay: 2s;
   animation-iteration-count: 1;
@@ -56,7 +56,7 @@ html {
 }
 
 .isinview .drei_song_zeile {
-  animation-name: bewegen_sz_drei;
+  animation-name: bewegen_sz;
   animation-duration: 1s;
   animation-delay: 3s;
   animation-iteration-count: 1;
@@ -71,7 +71,7 @@ html {
 }
 
 .isinview .vier_song_zeile {
-  animation-name: bewegen_sz_vier;
+  animation-name: bewegen_sz;
   animation-duration: 1s;
   animation-delay: 4s;
   animation-iteration-count: 1;
@@ -90,7 +90,7 @@ html {
 }
 
 .isinview .fuenf_song_zeile {
-  animation-name: bewegen_sz_fuenf;
+  animation-name: bewegen_sz;
   animation-duration: 1s;
   animation-delay: 5s;
   animation-iteration-count: 1;
@@ -103,8 +103,9 @@ html {
 .sechs_song_zeile {
   grid-area: reihe_sechs;
 }
+
 .isinview .sechs_song_zeile {
-  animation-name: bewegen_sz_sechs;
+  animation-name: bewegen_sz;
   animation-duration: 1s;
   animation-delay: 6s;
   animation-iteration-count: 1;
@@ -124,9 +125,12 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: italic;
   font-weight: 400;
+  /* font-size: 16vw; */
+  /* font-size: calc(1rem + 15vw); */
   font-size: 13.5rem;
+  line-height: 0.7em;
   text-transform: uppercase;
-  margin-bottom: -0.15em;
+  margin-bottom: 0.06em;
   padding: 0;
 }
 
@@ -134,6 +138,8 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: italic;
   font-weight: 400;
+  /* font-size: 16vw; */
+  /* font-size: calc(1rem + 15vw); */
   font-size: 8rem;
   text-transform: uppercase;
   margin-bottom: -0.15em;
@@ -144,7 +150,9 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: normal;
   font-weight: 300;
+  /* font-size: calc(1rem + 3vw); */
   font-size: 4rem;
+  line-height: 1em;
   margin: 0;
   padding: 0;
 }
@@ -153,87 +161,19 @@ html {
 
 /* ANIMATIONEN */
 /* Animation SONGZEILEN */
-@keyframes bewegen_sz_zwei {
+@keyframes bewegen_sz {
   0% {
-    transform: translate(0%, 0%);
+    transform: translate(0%, 100%);
     opacity: 0%;
   }
 
   50% {
-    transform: translate(0%, -25.5%);
+    transform: translate(0%, 50%);
     opacity: 50%;
   }
 
   100% {
-    transform: translate(0%, -51%);
-    opacity: 100%;
-  }
-}
-
-@keyframes bewegen_sz_drei {
-  0% {
     transform: translate(0%, 0%);
-    opacity: 0%;
-  }
-
-  50% {
-    transform: translate(0%, -51.5%);
-    opacity: 50%;
-  }
-
-  100% {
-    transform: translate(0%, -103%);
-    opacity: 100%;
-  }
-}
-
-@keyframes bewegen_sz_vier {
-  0% {
-    transform: translate(0%, 0%);
-    opacity: 0%;
-  }
-
-  50% {
-    transform: translate(0%, -77%);
-    opacity: 50%;
-  }
-
-  100% {
-    transform: translate(0%, -154%);
-    opacity: 100%;
-  }
-}
-
-@keyframes bewegen_sz_fuenf {
-  0% {
-    transform: translate(0%, 0%);
-    opacity: 0%;
-  }
-
-  50% {
-    transform: translate(0%, -102.5%);
-    opacity: 50%;
-  }
-
-  100% {
-    transform: translate(0%, -205%);
-    opacity: 100%;
-  }
-}
-
-@keyframes bewegen_sz_sechs {
-  0% {
-    transform: translate(0%, 0%);
-    opacity: 0%;
-  }
-
-  50% {
-    transform: translate(0%, -102.5%);
-    opacity: 50%;
-  }
-
-  100% {
-    transform: translate(0%, -205%);
     opacity: 100%;
   }
 }
@@ -256,8 +196,16 @@ html {
 
 
 /* SONSTIGES */
+.kleiner_abstand {
+  height: 2vw;
+}
+
 .abstand {
   height: 15vw;
+}
+
+.mittlerer_abstand {
+  height: 45vw;
 }
 
 .grosser_abstand {
@@ -275,45 +223,111 @@ html {
 
 /* MEDIAQUERIES */
 /* BP Desktop 1024px */
-@media all and (max-width: 64em) {
+
+
+@media all and (max-width: 87em) {
+  .bereich_eins, .bereich_drei, .bereich_sechs, .bereich_sieben {
+    width: 85%;
+  }
+
+/* @media all and (max-width: 87em) {
+  html {
+    font-size: 16px;
+  }
+} */
+
+@media all and (max-width: 77em) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media all and (max-width: 67em) {
   html {
     font-size: 12px;
+  }
+}
+
+@media all and (max-width: 58em) {
+  html {
+    font-size: 10px;
   }
 
   /* BP 850px Mobile 640px */
   @media all and (max-width: 53em) {
     html {
-      font-size: 5.5px;
+      font-size: 8.5px;
+    }
+
+    .progress-container {
+      height: 2px;
+    }
+
+    .progress-bar {
+      height: 2px;
+    }
+
+    .bereich_vier {
+      width: 35%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 5vmin;
+    }
+
+    .vertikal {
+      font-size: 12vw;
     }
 
     .raster_bereich_vier {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, max-content);
-      grid-row-gap: 2em;
+      grid-row-gap: 5em;
       grid-template-areas:
         "aussen hart und"
         "innen ganz weich";
     }
-
-
-    .raster_bereich_fuenf {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(7, auto);
-      grid-row-gap: 1em;
-      grid-template-areas:
-        "werden werden"
-        "kind_eins kind_zwei"
-        "kind_drei kind_vier"
-        "schon schon"
-        "mann_eins mann_zwei"
-        "mann_drei mann_vier"
-        "geeicht geeicht";
-    }
-
-    /*
-.und {
-  justify-items: center;
-} */
   }
+
+  p {
+    font-size: 16px;
+  }
+}
+
+@media all and (max-width: 41em) {
+  html {
+    font-size: 7px;
+  }
+
+  .raster_bereich_sieben {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    grid-template-rows: auto;
+    grid-column-gap: 4em;
+    grid-template-areas:
+      "spalte_eins spalte_zwei";
+  }
+}
+
+@media all and (max-width: 34em) {
+  html {
+    font-size: 6px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+}
+
+@media all and (max-width: 29em) {
+  html {
+    font-size: 4px;
+  }
+
+  p {
+    font-size: 9px;
+  }
+
+  .auszeichnung_fett {
+    font-size: 13rem;
+}
