Zoom=0, alle Schriftgrösen inkl. Mediaqueries angepasst + RZ Code

--- a/00_Website_Text_Projekt/_Sicherheitskopie/14_06_Eingezoomt/styles/main.css
+++ b/00_Website_Text_Projekt/_Sicherheitskopie/14_06_Eingezoomt/styles/main.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 24px;
+  font-size: 16px;
   width: 100vw;
   cursor: default;
 }
@@ -18,6 +18,7 @@ html {
   width: 0%;
   z-index: 101;
 }
+
 
 /* RASTER, GROSSE BEREICHE */
 .content {
@@ -103,6 +104,7 @@ html {
     "ein_mann_eins ."
     "ein_mann_zwei .";
 }
+
 
 /* SONGZEILEN GRUPPEN*/
 .eins_song_zeile {
@@ -202,6 +204,8 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: italic;
   font-weight: 400;
+  /* font-size: 16vw; */
+  /* font-size: calc(1rem + 15vw); */
   font-size: 13.5rem;
   line-height: 0.7em;
   text-transform: uppercase;
@@ -213,6 +217,8 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: italic;
   font-weight: 400;
+  /* font-size: 16vw; */
+  /* font-size: calc(1rem + 15vw); */
   font-size: 8rem;
   text-transform: uppercase;
   margin-bottom: -0.15em;
@@ -223,6 +229,7 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
   font-style: normal;
   font-weight: 300;
+  /* font-size: calc(1rem + 3vw); */
   font-size: 4rem;
   line-height: 1em;
   margin: 0;
@@ -474,6 +481,17 @@ html {
   animation-fill-mode: forwards;
 }
 
+/* .raster_eins_bereich_sechs .wann_ist {
+  opacity: 0%;
+  animation-name: erscheinen;
+  animation-duration: 1s;
+  animation-delay: 0s;
+  transform-origin: center;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+} */
 .ein_mann_eins {
   grid-area: ein_mann_eins;
   opacity: 0%;
@@ -560,6 +578,7 @@ img.jump-top {
   height: 3rem;
 }
 
+
 .top_button {
   animation-name: bounce_up;
   animation-duration: 1s;
@@ -568,6 +587,7 @@ img.jump-top {
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
 }
+
 
 /* SONSTIGES */
 .kleiner_abstand {
@@ -659,6 +679,7 @@ img.jump-top {
   }
 }
 
+
 /* Wann ist ein Mann ein Mann erscheinen */
 @keyframes erscheinen {
   0% {
@@ -691,120 +712,87 @@ img.jump-top {
 
 /* MEDIAQUERIES */
 /* BP Desktop 1024px */
-@media all and (max-width: 140em) {
-  html {
-    font-size: 21px;
-  }
-}
 
-@media all and (max-width: 123em) {
+
+@media all and (max-width: 87em) {
   .bereich_eins, .bereich_drei, .bereich_sechs, .bereich_sieben {
-    width: 80%;
+    width: 85%;
+  }
+
+/* @media all and (max-width: 87em) {
+  html {
+    font-size: 16px;
+  }
+} */
+
+@media all and (max-width: 77em) {
+  html {
+    font-size: 14px;
   }
 }
 
-@media all and (max-width: 108em) {
+@media all and (max-width: 67em) {
   html {
-    font-size: 18.5px;
+    font-size: 12px;
   }
 }
 
-@media all and (max-width: 94em) {
+@media all and (max-width: 58em) {
   html {
+    font-size: 10px;
+  }
+
+  /* BP 850px Mobile 640px */
+  @media all and (max-width: 53em) {
+    html {
+      font-size: 8.5px;
+    }
+
+    .progress-container {
+      height: 2px;
+    }
+
+    .progress-bar {
+      height: 2px;
+    }
+
+    .bereich_vier {
+      width: 35%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 5vmin;
+    }
+
+    .vertikal {
+      font-size: 12vw;
+    }
+
+    .raster_bereich_vier {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, max-content);
+      grid-row-gap: 5em;
+      grid-template-areas:
+        "aussen hart und"
+        "innen ganz weich";
+    }
+  }
+
+  p {
     font-size: 16px;
   }
 }
 
-@media all and (max-width: 82em) {
-  html {
-    font-size: 14px;
-  }
-
-  img.jump-top {
-    /*jump to top button*/
-    width: 50px;
-    height: 50px;
-  }
-}
-
-@media all and (max-width: 72em) {
-  html {
-    font-size: 12.2px;
-  }
-}
-
-@media all and (max-width: 63em) {
-  html {
-    font-size: 10.5px;
-  }
-
-  p {
-    font-size: 17px;
-  }
-}
-
-@media all and (max-width: 54em) {
-  html {
-    font-size: 9.1px;
-  }
-}
-
-@media all and (max-width: 47em) {
-  html {
-    font-size: 8px;
-  }
-
-  p {
-    font-size: 15px;
-  }
-
-  img.jump-top {
-    /*jump to top button*/
-    width: 40px;
-    height: 40px;
-  }
-}
-
-/* Mobile 640px */
-@media all and (max-width: 40em) {
+@media all and (max-width: 41em) {
   html {
     font-size: 7px;
-  }
-
-  .progress-container {
-    height: 2px;
-  }
-
-  .progress-bar {
-    height: 2px;
-  }
-
-  .bereich_vier {
-    width: 35%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5vmin;
-  }
-
-  .vertikal {
-    font-size: 12vw;
-  }
-
-  .raster_bereich_vier {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, max-content);
-    grid-row-gap: 5em;
-    grid-template-areas:
-      "aussen hart und"
-      "innen ganz weich";
   }
 
   .raster_bereich_sieben {
     display: grid;
     grid-template-columns: max-content max-content;
     grid-template-rows: auto;
-    grid-column-gap: 5em;
+    grid-column-gap: 4em;
     grid-template-areas:
       "spalte_eins spalte_zwei";
   }
@@ -816,22 +804,19 @@ img.jump-top {
   }
 
   p {
-    font-size: 12px;
+    font-size: 14px;
   }
 }
 
 @media all and (max-width: 29em) {
   html {
-    font-size: 5px;
+    font-size: 4px;
+  }
+
+  p {
+    font-size: 9px;
   }
 
   .auszeichnung_fett {
-    font-size: 17rem;
-  }
-
-  img.jump-top {
-    /*jump to top button*/
-    width: 30px;
-    height: 30px;
-  }
+    font-size: 13rem;
 }
